# badger-vaults

./: .gitignore  README.md  brownie-config.yaml  pyproject.toml  setup.cfg
contracts/: BadgerRegistry.sol  BaseStrategyUpgradeable.sol  BaseWrapper.sol  SushiV2Strategy.sol  Vault.vy
contracts/test/: TestDeposit.sol  TestFlashLoan.sol  TestHealthCheck.sol  TestStrategy.sol  Token.sol
interfaces/sushi/: IRewarder.sol  ISushiChef.sol
scripts/: __init__.py  connect_account.py  deploy.py  deploy_badger_strategy.py  deploy_badger_strategy_demo.py  deploy_badger_vault.py  deploy_registry.py  keep.py  register_vault.py
tests/functional/: conftest.py
tests/functional/strategy/: test_clone.py  test_config.py  test_fees.py  test_migration.py  test_misc.py
tests/functional/vault/: test_badger_edits.py  test_config.py  test_losses.py  test_misc.py  test_strategies.py  test_withdrawal.py
tests/integration/: conftest.py
