[metadata]
name = Badger-Vaults
version = b0.1.1
author = Alex The Entreprenerd
author_email = alex@badger.finance
description = Initial badger vault setup
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Badger-Finance/badger-vaults
project_urls =
    Bug Tracker = https://github.com/Badger-Finance/badger-vaults/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where = 